--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^4.19.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
