--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dfinity/agent": "^0.10.4",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "antd": "^4.19.2",
+    "buffer": "^6.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
